@@ -6,6 +6,5 @@ Makefile
 .libs
 config.h
 stamp-*
-ca-bundle.h
 getdate.c
 curllib.dsp
