@@ -1,5 +1,5 @@
 #########################################################################
-# $Id: Makefile.m32,v 1.52 2008-01-29 23:46:41 gknauf Exp $
+# $Id: Makefile.m32,v 1.53 2008-03-31 12:09:43 mmarek Exp $
 #
 ## Makefile for building libcurl.a with MingW32 (GCC-3.2)
 ## and optionally OpenSSL (0.9.8), libssh2 (0.18), zlib (1.2.3)
@@ -113,7 +113,7 @@ RESOURCE = libcurl.res
 
 .SUFFIXES: .rc .res
 
-all: ca-bundle.h $(libcurl_a_LIBRARY) $(libcurl_dll_LIBRARY)
+all: $(libcurl_a_LIBRARY) $(libcurl_dll_LIBRARY)
 
 $(libcurl_a_LIBRARY): $(libcurl_a_OBJECTS) $(libcurl_a_DEPENDENCIES)
 	-$(RM) $@
@@ -135,17 +135,12 @@ $(libcurl_dll_LIBRARY): $(libcurl_a_OBJECTS) $(RESOURCE) $(libcurl_dll_DEPENDENC
 	$(RC) $(RCFLAGS) $< -o $@
 
 clean:
-	-$(RM) $(libcurl_a_OBJECTS) $(RESOURCE) ca-bundle.h
+	-$(RM) $(libcurl_a_OBJECTS) $(RESOURCE)
 
 distrib: clean
 	-$(RM) $(libcurl_a_LIBRARY) $(libcurl_dll_LIBRARY) $(libcurl_dll_a_LIBRARY)
 
 FORCE: ;
-
-ca-bundle.h: FORCE Makefile.m32
-	@echo Creating $@
-	@echo $(DL)/* Do not edit this file - it is created by make!$(DL) > $@
-	@echo $(DL)*/$(DL) >> $@
 
 $(ARES_LIB)/libcares.a:
 	$(MAKE) -C $(ARES_LIB) -f Makefile.m32
