@@ -1,5 +1,5 @@
 #################################################################
-# $Id: Makefile.netware,v 1.81 2008-02-27 01:36:01 gknauf Exp $
+# $Id: Makefile.netware,v 1.82 2008-03-31 12:09:43 mmarek Exp $
 #
 ## Makefile for building libcurl.nlm (NetWare version - gnu make)
 ## Use: make -f Makefile.netware
@@ -230,7 +230,7 @@ nlm: prebuild $(TARGET).nlm
 
 lib: prebuild $(TARGET).$(LIBEXT)
 
-prebuild: $(OBJDIR) $(OBJDIR)/version.inc config.h ca-bundle.h
+prebuild: $(OBJDIR) $(OBJDIR)/version.inc config.h
 
 $(OBJDIR)/%.o: %.c
 #	@echo Compiling $<
@@ -252,7 +252,7 @@ ifdef WITH_SSL
 endif
 
 clean:
-	-$(RM) config.h ca-bundle.h
+	-$(RM) config.h
 	-$(RM) -r $(OBJDIR)
 
 distclean: clean
@@ -523,25 +523,11 @@ endif
 
 FORCE: ;
 
-ca-bundle.h: FORCE Makefile.netware
-	@echo Creating $@
-	@echo $(DL)/* Do not edit this file - it is created by make!$(DL) > $@
-	@echo $(DL)** All your changes will be lost!!$(DL) >> $@
-	@echo $(DL)*/$(DL) >> $@
-ifdef CABUNDLE
-	@echo $(DL)#define CURL_CA_BUNDLE "$(CABUNDLE)"$(DL) >> $@
-else
-	@echo $(DL)#define CURL_CA_BUNDLE getenv("CURL_CA_BUNDLE")$(DL) >> $@
-endif
-
 info: $(OBJDIR)/version.inc
 	@echo Configured to build $(TARGET) with these options:
 	@echo libarchitecture: $(LIBARCH)
 	@echo curl version:    $(LIBCURL_VERSION_STR)
 	@echo compiler/linker: $(CC) / $(LD)
-ifdef CABUNDLE
-	@echo ca-bundle path:  $(CABUNDLE)
-endif
 ifdef WITH_SSL
 	@echo SSL support:     enabled (OpenSSL)
 else
